# backend/src/auth/dto/auth-user.dto.ts
@@ -1,0 +1,17 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class AuthUserDto {
+  @ApiProperty()
+  id!: string;
+
+  @ApiProperty()
+  email!: string;
+
+  @ApiProperty()
+  name!: string;
+}
+
+export class AuthResponseDto {
+  @ApiProperty({ type: AuthUserDto })
+  user!: AuthUserDto;
+}
