# backend/src/auth/dto/login.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, IsString, MinLength } from 'class-validator';
+
+export class LoginDto {
+  @ApiProperty({ example: 'admin@scout.local' })
+  @IsEmail()
+  email!: string;
+
+  @ApiProperty({ example: 'admin12345', minLength: 8 })
+  @IsString()
+  @MinLength(8)
+  password!: string;
+}
