# backend/src/auth/dto/register.dto.ts
@@ -1,0 +1,18 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, IsString, MinLength } from 'class-validator';
+
+export class RegisterDto {
+  @ApiProperty({ example: 'user@scout.local' })
+  @IsEmail()
+  email!: string;
+
+  @ApiProperty({ example: 'John Doe', minLength: 1 })
+  @IsString()
+  @MinLength(1)
+  name!: string;
+
+  @ApiProperty({ example: 'supersecret', minLength: 8 })
+  @IsString()
+  @MinLength(8)
+  password!: string;
+}
